--- a/your-code/challenge-1.ipynb
+++ b/your-code/challenge-1.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
        "9       50       64     43           1      False  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -584,7 +584,7 @@
        "9       64     43           1      False  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -760,7 +760,7 @@
        "4       50     65           1      False       1.21  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -788,7 +788,7 @@
        "9.0"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -806,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -815,7 +815,7 @@
        "0.04"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -839,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -991,7 +991,7 @@
        "4       50     65           1      False       1.21          Fire  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1019,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -1043,142 +1043,63 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>#</th>\n",
        "      <th>Name</th>\n",
-       "      <th>Type 1</th>\n",
-       "      <th>Type 2</th>\n",
-       "      <th>Total</th>\n",
-       "      <th>HP</th>\n",
-       "      <th>Attack</th>\n",
-       "      <th>Defense</th>\n",
-       "      <th>Sp. Atk</th>\n",
-       "      <th>Sp. Def</th>\n",
-       "      <th>Speed</th>\n",
-       "      <th>Generation</th>\n",
-       "      <th>Legendary</th>\n",
-       "      <th>A/D Ratio</th>\n",
        "      <th>Combo Type</th>\n",
+       "      <th>A/D Ratio</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>429</th>\n",
-       "      <td>386</td>\n",
+       "      <th>138</th>\n",
        "      <td>DeoxysAttack Forme</td>\n",
        "      <td>Psychic</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>600</td>\n",
-       "      <td>50</td>\n",
-       "      <td>180</td>\n",
-       "      <td>20</td>\n",
-       "      <td>180</td>\n",
-       "      <td>20</td>\n",
-       "      <td>150</td>\n",
-       "      <td>3</td>\n",
-       "      <td>True</td>\n",
        "      <td>9.00</td>\n",
-       "      <td>Psychic</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>347</th>\n",
-       "      <td>318</td>\n",
+       "      <th>79</th>\n",
        "      <td>Carvanha</td>\n",
-       "      <td>Water</td>\n",
-       "      <td>Dark</td>\n",
-       "      <td>305</td>\n",
-       "      <td>45</td>\n",
-       "      <td>90</td>\n",
-       "      <td>20</td>\n",
-       "      <td>65</td>\n",
-       "      <td>20</td>\n",
-       "      <td>65</td>\n",
-       "      <td>3</td>\n",
-       "      <td>False</td>\n",
-       "      <td>4.50</td>\n",
        "      <td>Water-Dark</td>\n",
+       "      <td>4.50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>15</td>\n",
+       "      <th>413</th>\n",
        "      <td>Mega Beedrill</td>\n",
-       "      <td>Bug</td>\n",
-       "      <td>Poison</td>\n",
-       "      <td>495</td>\n",
-       "      <td>65</td>\n",
-       "      <td>150</td>\n",
-       "      <td>40</td>\n",
-       "      <td>15</td>\n",
-       "      <td>80</td>\n",
-       "      <td>145</td>\n",
-       "      <td>1</td>\n",
-       "      <td>False</td>\n",
-       "      <td>3.75</td>\n",
        "      <td>Bug-Poison</td>\n",
+       "      <td>3.75</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>453</th>\n",
-       "      <td>408</td>\n",
+       "      <th>117</th>\n",
        "      <td>Cranidos</td>\n",
        "      <td>Rock</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>350</td>\n",
-       "      <td>67</td>\n",
-       "      <td>125</td>\n",
-       "      <td>40</td>\n",
-       "      <td>30</td>\n",
-       "      <td>30</td>\n",
-       "      <td>58</td>\n",
-       "      <td>4</td>\n",
-       "      <td>False</td>\n",
        "      <td>3.12</td>\n",
-       "      <td>Rock</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>348</th>\n",
-       "      <td>319</td>\n",
+       "      <th>617</th>\n",
        "      <td>Sharpedo</td>\n",
-       "      <td>Water</td>\n",
-       "      <td>Dark</td>\n",
-       "      <td>460</td>\n",
-       "      <td>70</td>\n",
-       "      <td>120</td>\n",
-       "      <td>40</td>\n",
-       "      <td>95</td>\n",
-       "      <td>40</td>\n",
-       "      <td>95</td>\n",
-       "      <td>3</td>\n",
-       "      <td>False</td>\n",
-       "      <td>3.00</td>\n",
        "      <td>Water-Dark</td>\n",
+       "      <td>3.00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       #                Name   Type 1  Type 2  Total  HP  Attack  Defense  \\\n",
-       "429  386  DeoxysAttack Forme  Psychic     NaN    600  50     180       20   \n",
-       "347  318            Carvanha    Water    Dark    305  45      90       20   \n",
-       "19    15       Mega Beedrill      Bug  Poison    495  65     150       40   \n",
-       "453  408            Cranidos     Rock     NaN    350  67     125       40   \n",
-       "348  319            Sharpedo    Water    Dark    460  70     120       40   \n",
-       "\n",
-       "     Sp. Atk  Sp. Def  Speed  Generation  Legendary  A/D Ratio  Combo Type  \n",
-       "429      180       20    150           3       True       9.00     Psychic  \n",
-       "347       65       20     65           3      False       4.50  Water-Dark  \n",
-       "19        15       80    145           1      False       3.75  Bug-Poison  \n",
-       "453       30       30     58           4      False       3.12        Rock  \n",
-       "348       95       40     95           3      False       3.00  Water-Dark  "
+       "                   Name  Combo Type  A/D Ratio\n",
+       "138  DeoxysAttack Forme     Psychic       9.00\n",
+       "79             Carvanha  Water-Dark       4.50\n",
+       "413       Mega Beedrill  Bug-Poison       3.75\n",
+       "117            Cranidos        Rock       3.12\n",
+       "617            Sharpedo  Water-Dark       3.00"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pokemon_with_highest_ratio = pokemon.sort_values('A/D Ratio', ascending=False).head(5)\n",
-    "pokemon_with_highest_ratio.head()"
+    "pokemon_with_highest_ratio = pokemon.groupby(['Name', 'Combo Type']).agg({'A/D Ratio':max}).reset_index().sort_values('A/D Ratio', ascending=False).head(5)\n",
+    "pokemon_with_highest_ratio"
    ]
   },
   {
@@ -1192,7 +1113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -1216,50 +1137,55 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>A/D Ratio</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
+       "      <th>index</th>\n",
        "      <th>Combo Type</th>\n",
-       "      <th></th>\n",
+       "      <th>A/D Ratio</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Bug-Poison</th>\n",
-       "      <td>3.75</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Psychic</th>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Psychic</td>\n",
        "      <td>9.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Rock</th>\n",
-       "      <td>3.12</td>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Water-Dark</td>\n",
+       "      <td>4.50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Water-Dark</th>\n",
-       "      <td>4.50</td>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Bug-Poison</td>\n",
+       "      <td>3.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Rock</td>\n",
+       "      <td>3.12</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            A/D Ratio\n",
-       "Combo Type           \n",
-       "Bug-Poison       3.75\n",
-       "Psychic          9.00\n",
-       "Rock             3.12\n",
-       "Water-Dark       4.50"
+       "   index  Combo Type  A/D Ratio\n",
+       "1      1     Psychic       9.00\n",
+       "3      3  Water-Dark       4.50\n",
+       "0      0  Bug-Poison       3.75\n",
+       "2      2        Rock       3.12"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pokemon_with_highest_ratio.groupby('Combo Type').agg({'A/D Ratio':max})"
+    "pokemon_with_highest_ratio.groupby('Combo Type').agg({'A/D Ratio':max}).reset_index().reset_index().sort_values('A/D Ratio', ascending=False).head(5)"
    ]
   },
   {
@@ -1275,7 +1201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -1299,6 +1225,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Combo Type</th>\n",
        "      <th>#</th>\n",
        "      <th>Total</th>\n",
        "      <th>HP</th>\n",
@@ -1311,24 +1238,11 @@
        "      <th>Legendary</th>\n",
        "      <th>A/D Ratio</th>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Combo Type</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Bug-Poison</th>\n",
+       "      <th>0</th>\n",
+       "      <td>Bug-Poison</td>\n",
        "      <td>199.166667</td>\n",
        "      <td>347.916667</td>\n",
        "      <td>53.750000</td>\n",
@@ -1342,7 +1256,8 @@
        "      <td>1.315833</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Psychic</th>\n",
+       "      <th>1</th>\n",
+       "      <td>Psychic</td>\n",
        "      <td>381.973684</td>\n",
        "      <td>464.552632</td>\n",
        "      <td>72.552632</td>\n",
@@ -1356,7 +1271,8 @@
        "      <td>1.164211</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Rock</th>\n",
+       "      <th>2</th>\n",
+       "      <td>Rock</td>\n",
        "      <td>410.111111</td>\n",
        "      <td>409.444444</td>\n",
        "      <td>67.111111</td>\n",
@@ -1370,7 +1286,8 @@
        "      <td>1.258889</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Water-Dark</th>\n",
+       "      <th>3</th>\n",
+       "      <td>Water-Dark</td>\n",
        "      <td>347.666667</td>\n",
        "      <td>493.833333</td>\n",
        "      <td>69.166667</td>\n",
@@ -1388,34 +1305,32 @@
        "</div>"
       ],
       "text/plain": [
-       "                     #       Total         HP      Attack     Defense  \\\n",
-       "Combo Type                                                              \n",
-       "Bug-Poison  199.166667  347.916667  53.750000   68.333333   58.083333   \n",
-       "Psychic     381.973684  464.552632  72.552632   64.947368   67.236842   \n",
-       "Rock        410.111111  409.444444  67.111111  103.333333  107.222222   \n",
-       "Water-Dark  347.666667  493.833333  69.166667  120.000000   65.166667   \n",
+       "   Combo Type           #       Total         HP      Attack     Defense  \\\n",
+       "0  Bug-Poison  199.166667  347.916667  53.750000   68.333333   58.083333   \n",
+       "1     Psychic  381.973684  464.552632  72.552632   64.947368   67.236842   \n",
+       "2        Rock  410.111111  409.444444  67.111111  103.333333  107.222222   \n",
+       "3  Water-Dark  347.666667  493.833333  69.166667  120.000000   65.166667   \n",
        "\n",
-       "              Sp. Atk    Sp. Def      Speed  Generation  Legendary  A/D Ratio  \n",
-       "Combo Type                                                                     \n",
-       "Bug-Poison  42.500000  59.333333  65.916667    2.333333   0.000000   1.315833  \n",
-       "Psychic     98.552632  82.394737  78.868421    3.342105   0.236842   1.164211  \n",
-       "Rock        40.555556  58.333333  32.888889    3.888889   0.111111   1.258889  \n",
-       "Water-Dark  88.833333  63.500000  87.166667    3.166667   0.000000   2.291667  "
+       "     Sp. Atk    Sp. Def      Speed  Generation  Legendary  A/D Ratio  \n",
+       "0  42.500000  59.333333  65.916667    2.333333   0.000000   1.315833  \n",
+       "1  98.552632  82.394737  78.868421    3.342105   0.236842   1.164211  \n",
+       "2  40.555556  58.333333  32.888889    3.888889   0.111111   1.258889  \n",
+       "3  88.833333  63.500000  87.166667    3.166667   0.000000   2.291667  "
       ]
      },
-     "execution_count": 67,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "filtered_combo_types = pokemon_with_highest_ratio['Combo Type'].unique()\n",
-    "pokemon[pokemon['Combo Type'].isin(filtered_combo_types)].groupby('Combo Type').agg(np.mean)"
+    "pokemon[pokemon['Combo Type'].isin(filtered_combo_types)].groupby('Combo Type').agg(np.mean).reset_index()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1423,6 +1338,13 @@
     "\n",
     "pokemon.to_csv('Pokemon_cleaned.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
