--- a/your-code/challenge-2.ipynb
+++ b/your-code/challenge-2.ipynb
@@ -846,7 +846,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# I will pick a Dragon-Psychic"
+    "# I will pick a Dragon-Ground because Dragon has the highest positive correlation with Total and Ground as the highest positive correlation with Dragon "
    ]
   },
   {
