--- a/your-code/challenge-1.ipynb
+++ b/your-code/challenge-1.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
        "9       50       64     43           1      False  "
       ]
      },
-     "execution_count": 77,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -584,7 +584,7 @@
        "9       64     43           1      False  "
       ]
      },
-     "execution_count": 79,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -760,7 +760,7 @@
        "4       50     65           1      False       1.21  "
       ]
      },
-     "execution_count": 80,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -788,7 +788,7 @@
        "9.0"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -806,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -815,7 +815,7 @@
        "0.04"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -839,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -991,7 +991,7 @@
        "4       50     65           1      False       1.21          Fire  "
       ]
      },
-     "execution_count": 83,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1019,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -1092,7 +1092,7 @@
        "617            Sharpedo  Water-Dark       3.00"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1113,7 +1113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -1137,7 +1137,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>index</th>\n",
        "      <th>Combo Type</th>\n",
        "      <th>A/D Ratio</th>\n",
        "    </tr>\n",
@@ -1145,25 +1144,21 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
        "      <td>Psychic</td>\n",
        "      <td>9.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
        "      <td>Water-Dark</td>\n",
        "      <td>4.50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
        "      <td>Bug-Poison</td>\n",
        "      <td>3.75</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
        "      <td>Rock</td>\n",
        "      <td>3.12</td>\n",
        "    </tr>\n",
@@ -1172,20 +1167,20 @@
        "</div>"
       ],
       "text/plain": [
-       "   index  Combo Type  A/D Ratio\n",
-       "1      1     Psychic       9.00\n",
-       "3      3  Water-Dark       4.50\n",
-       "0      0  Bug-Poison       3.75\n",
-       "2      2        Rock       3.12"
+       "   Combo Type  A/D Ratio\n",
+       "1     Psychic       9.00\n",
+       "3  Water-Dark       4.50\n",
+       "0  Bug-Poison       3.75\n",
+       "2        Rock       3.12"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pokemon_with_highest_ratio.groupby('Combo Type').agg({'A/D Ratio':max}).reset_index().reset_index().sort_values('A/D Ratio', ascending=False).head(5)"
+    "pokemon_with_highest_ratio.groupby('Combo Type').agg({'A/D Ratio':max}).reset_index().sort_values('A/D Ratio', ascending=False).head(5)"
    ]
   },
   {
@@ -1201,7 +1196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -1318,7 +1313,7 @@
        "3  88.833333  63.500000  87.166667    3.166667   0.000000   2.291667  "
       ]
      },
-     "execution_count": 93,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1330,7 +1325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
