--- a/your-code/challenge-1.ipynb
+++ b/your-code/challenge-1.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
        "9       50       64     43           1      False  "
       ]
      },
-     "execution_count": 98,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -584,7 +584,7 @@
        "9       64     43           1      False  "
       ]
      },
-     "execution_count": 100,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -760,7 +760,7 @@
        "4       50     65           1      False       1.21  "
       ]
      },
-     "execution_count": 101,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -779,22 +779,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>#</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Type 1</th>\n",
+       "      <th>Type 2</th>\n",
+       "      <th>Total</th>\n",
+       "      <th>HP</th>\n",
+       "      <th>Attack</th>\n",
+       "      <th>Defense</th>\n",
+       "      <th>Sp. Atk</th>\n",
+       "      <th>Sp. Def</th>\n",
+       "      <th>Speed</th>\n",
+       "      <th>Generation</th>\n",
+       "      <th>Legendary</th>\n",
+       "      <th>A/D Ratio</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>429</th>\n",
+       "      <td>386</td>\n",
+       "      <td>DeoxysAttack Forme</td>\n",
+       "      <td>Psychic</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>600</td>\n",
+       "      <td>50</td>\n",
+       "      <td>180</td>\n",
+       "      <td>20</td>\n",
+       "      <td>180</td>\n",
+       "      <td>20</td>\n",
+       "      <td>150</td>\n",
+       "      <td>3</td>\n",
+       "      <td>True</td>\n",
+       "      <td>9.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "9.0"
+       "       #                Name   Type 1 Type 2  Total  HP  Attack  Defense  \\\n",
+       "429  386  DeoxysAttack Forme  Psychic    NaN    600  50     180       20   \n",
+       "\n",
+       "     Sp. Atk  Sp. Def  Speed  Generation  Legendary  A/D Ratio  \n",
+       "429      180       20    150           3       True        9.0  "
       ]
      },
-     "execution_count": 102,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pokemon['A/D Ratio'].max()"
+    "pokemon[pokemon['A/D Ratio'] == pokemon['A/D Ratio'].max()]"
    ]
   },
   {
@@ -806,22 +867,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>#</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Type 1</th>\n",
+       "      <th>Type 2</th>\n",
+       "      <th>Total</th>\n",
+       "      <th>HP</th>\n",
+       "      <th>Attack</th>\n",
+       "      <th>Defense</th>\n",
+       "      <th>Sp. Atk</th>\n",
+       "      <th>Sp. Def</th>\n",
+       "      <th>Speed</th>\n",
+       "      <th>Generation</th>\n",
+       "      <th>Legendary</th>\n",
+       "      <th>A/D Ratio</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>230</th>\n",
+       "      <td>213</td>\n",
+       "      <td>Shuckle</td>\n",
+       "      <td>Bug</td>\n",
+       "      <td>Rock</td>\n",
+       "      <td>505</td>\n",
+       "      <td>20</td>\n",
+       "      <td>10</td>\n",
+       "      <td>230</td>\n",
+       "      <td>10</td>\n",
+       "      <td>230</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.04</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "0.04"
+       "       #     Name Type 1 Type 2  Total  HP  Attack  Defense  Sp. Atk  Sp. Def  \\\n",
+       "230  213  Shuckle    Bug   Rock    505  20      10      230       10      230   \n",
+       "\n",
+       "     Speed  Generation  Legendary  A/D Ratio  \n",
+       "230      5           2      False       0.04  "
       ]
      },
-     "execution_count": 103,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pokemon['A/D Ratio'].min()"
+    "pokemon[pokemon['A/D Ratio'] == pokemon['A/D Ratio'].min()]"
    ]
   },
   {
@@ -1015,6 +1137,169 @@
    "metadata": {},
    "source": [
     "#### Identify the pokemon whose `A/D Ratio` are among the top 5."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>#</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Type 1</th>\n",
+       "      <th>Type 2</th>\n",
+       "      <th>Total</th>\n",
+       "      <th>HP</th>\n",
+       "      <th>Attack</th>\n",
+       "      <th>Defense</th>\n",
+       "      <th>Sp. Atk</th>\n",
+       "      <th>Sp. Def</th>\n",
+       "      <th>Speed</th>\n",
+       "      <th>Generation</th>\n",
+       "      <th>Legendary</th>\n",
+       "      <th>A/D Ratio</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>429</th>\n",
+       "      <td>429</td>\n",
+       "      <td>386</td>\n",
+       "      <td>DeoxysAttack Forme</td>\n",
+       "      <td>Psychic</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>600</td>\n",
+       "      <td>50</td>\n",
+       "      <td>180</td>\n",
+       "      <td>20</td>\n",
+       "      <td>180</td>\n",
+       "      <td>20</td>\n",
+       "      <td>150</td>\n",
+       "      <td>3</td>\n",
+       "      <td>True</td>\n",
+       "      <td>9.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>347</th>\n",
+       "      <td>347</td>\n",
+       "      <td>318</td>\n",
+       "      <td>Carvanha</td>\n",
+       "      <td>Water</td>\n",
+       "      <td>Dark</td>\n",
+       "      <td>305</td>\n",
+       "      <td>45</td>\n",
+       "      <td>90</td>\n",
+       "      <td>20</td>\n",
+       "      <td>65</td>\n",
+       "      <td>20</td>\n",
+       "      <td>65</td>\n",
+       "      <td>3</td>\n",
+       "      <td>False</td>\n",
+       "      <td>4.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>19</td>\n",
+       "      <td>15</td>\n",
+       "      <td>Mega Beedrill</td>\n",
+       "      <td>Bug</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>495</td>\n",
+       "      <td>65</td>\n",
+       "      <td>150</td>\n",
+       "      <td>40</td>\n",
+       "      <td>15</td>\n",
+       "      <td>80</td>\n",
+       "      <td>145</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "      <td>3.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>453</th>\n",
+       "      <td>453</td>\n",
+       "      <td>408</td>\n",
+       "      <td>Cranidos</td>\n",
+       "      <td>Rock</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>350</td>\n",
+       "      <td>67</td>\n",
+       "      <td>125</td>\n",
+       "      <td>40</td>\n",
+       "      <td>30</td>\n",
+       "      <td>30</td>\n",
+       "      <td>58</td>\n",
+       "      <td>4</td>\n",
+       "      <td>False</td>\n",
+       "      <td>3.12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>348</th>\n",
+       "      <td>348</td>\n",
+       "      <td>319</td>\n",
+       "      <td>Sharpedo</td>\n",
+       "      <td>Water</td>\n",
+       "      <td>Dark</td>\n",
+       "      <td>460</td>\n",
+       "      <td>70</td>\n",
+       "      <td>120</td>\n",
+       "      <td>40</td>\n",
+       "      <td>95</td>\n",
+       "      <td>40</td>\n",
+       "      <td>95</td>\n",
+       "      <td>3</td>\n",
+       "      <td>False</td>\n",
+       "      <td>3.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     index    #                Name   Type 1  Type 2  Total  HP  Attack  \\\n",
+       "429    429  386  DeoxysAttack Forme  Psychic     NaN    600  50     180   \n",
+       "347    347  318            Carvanha    Water    Dark    305  45      90   \n",
+       "19      19   15       Mega Beedrill      Bug  Poison    495  65     150   \n",
+       "453    453  408            Cranidos     Rock     NaN    350  67     125   \n",
+       "348    348  319            Sharpedo    Water    Dark    460  70     120   \n",
+       "\n",
+       "     Defense  Sp. Atk  Sp. Def  Speed  Generation  Legendary  A/D Ratio  \n",
+       "429       20      180       20    150           3       True       9.00  \n",
+       "347       20       65       20     65           3      False       4.50  \n",
+       "19        40       15       80    145           1      False       3.75  \n",
+       "453       40       30       30     58           4      False       3.12  \n",
+       "348       40       95       40     95           3      False       3.00  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pokemon.reset_index().sort_values('A/D Ratio', ascending=False).head(5)"
    ]
   },
   {
